[package]
name = "totokens"
version = "0.0.3"
authors = ["Michiel Kalkman <michiel@nosuchtype.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
regex = "1.7.3"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tiktoken-rs = "0.3.3"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-tree = "0.2.2"
walkdir = "2.3.3"
